# exercicio-26-05-2020

./: README.md  docker-compose.yml  pyproject.toml
produtos/: urls.py  views.py
produtos/templates/: base.html  categorias.html  form-categorias.html  form-produto.html  index.html
scripts/: run.sh
setup/: settings.py  urls.py
