[tool.poetry]
name = "exercicio-26-05-2020"
version = "0.1.0"
description = "Projeto para prática."
authors = ["Danilo Costa <danilo.v.barbosa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
